修改包名，修改base64实现