@@ -1,25 +1,20 @@
 package cn.org.bachelor.up.oauth2.key;
-import sun.misc.BASE64Decoder;
-
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
 
 public class Base64 {
 	// 将 s 进行 BASE64 编码
 	public static String encode(String s) {
 		if (s == null)
 			return null;
-		return (new sun.misc.BASE64Encoder()).encode(s.getBytes());
+		return java.util.Base64.getEncoder().encodeToString(s.getBytes());
 	}
 
 	// 将 BASE64 编码的字符串 s 进行解码
 	public static String decode(String s) {
 		if (s == null)
 			return null;
-		BASE64Decoder decoder = new BASE64Decoder();
+		java.util.Base64.Decoder decoder = java.util.Base64.getDecoder();
 		try {
-			byte[] b = decoder.decodeBuffer(s);
+			byte[] b = decoder.decode(s);
 			return new String(b);
 		} catch (Exception e) {
 			return null;
@@ -40,33 +35,12 @@ public class Base64 {
 	public static byte[] encode(byte[] s){
 		if (s == null)
 			return null;
-		ByteArrayOutputStream os = new ByteArrayOutputStream();
-		try {
-			(new sun.misc.BASE64Encoder()).encode(s, os);
-		} catch (IOException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-
-		}finally{
-			try {
-				os.close();
-			} catch (IOException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			}
-		}
-		return os.toByteArray();
+		return java.util.Base64.getEncoder().encode(s);
 	}
 
 	public static byte[] decode(byte[] s){
 		if (s == null)
 			return null;
-		BASE64Decoder decoder = new BASE64Decoder();
-		try {
-			byte[] b = decoder.decodeBuffer(new ByteArrayInputStream(s));
-			return b;
-		} catch (Exception e) {
-			return null;
-		}
+			return java.util.Base64.getEncoder().encode(s);
 	}
 }
